--- a/basic.html
+++ b/basic.html
@@ -24,25 +24,25 @@
 
     </nav>
     <h1>Welcome to Crazy Joe's Emporium!!!</h1>
-    <img src="images/crazysale.jpg" class="images img-fluid rounded-circle mx-auto d-block" alt="crazy sales">
+    <img src="crazysale.jpg" class="images img-fluid rounded-circle mx-auto d-block" alt="crazy sales">
     <h2 id="merch">Brand New Stock Below!!!!</h2>
     <div class="container">
         <div class="row">
             <div class="col">
-                <img src="images/cheese.jpg" alt="Cheese" class="img-thumbnail img-fluid">
+                <img src="cheese.jpg" alt="Cheese" class="img-thumbnail img-fluid">
                 <p>Cheese</p>
                 <button type="button" class="btn btn-warning">Buy Me Now</button>
             </div>
             <!--A thumbnail is a preview image which is smaller than the actual image and occupies less space on the screen than a full sized image. The img-thumbnail class above automatically converts the image into a smaller thumbnail through bootstrap-->
 
             <div class="col">
-                <img src="images/flowers.jpg" alt="Flowers" class="img-thumbnail img-fluid">
+                <img src="flowers.jpg" alt="Flowers" class="img-thumbnail img-fluid">
                 <!--Using im-fluid I made the images responsive images. Responsive images are images that scale automatically to the resolution of the device the user is using-->
                 <p>Flowers</p>
                 <button type="button" class="btn btn-warning">Buy Me Now</button>
             </div>
             <div class="col">
-                <img src="images/fruit.jpg" alt="Fruit" class="img-thumbnail img-fluid">
+                <img src="fruit.jpg" alt="Fruit" class="img-thumbnail img-fluid">
                 <p>Fruit</p>
                 <button type="button" class="btn btn-warning">Buy Me Now</button>
             </div>
@@ -53,17 +53,17 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <img src="images/jewellery.jpg" alt="Jewellery" class="img-fluid img-thumbnail">
+                <img src="jewellery.jpg" alt="Jewellery" class="img-fluid img-thumbnail">
                 <p>Jewellery</p>
                 <button type="button" class="btn btn-warning">Buy Me Now</button>
             </div>
             <div class="col">
-                <img src="images/masks.jpg" alt="Masks" class="img-fluid img-thumbnail">
+                <img src="masks.jpg" alt="Masks" class="img-fluid img-thumbnail">
                 <p>Masks</p>
                 <button type="button" class="btn btn-warning">Buy Me Now</button>
             </div>
             <div class="col">
-                <img src="images/muffins.jpg" alt="Muffins" class="img-fluid img-thumbnail">
+                <img src="muffins.jpg" alt="Muffins" class="img-fluid img-thumbnail">
                 <p>Muffins</p>
                 <button type="button" class="btn btn-warning">Buy Me Now</button>
             </div>
@@ -72,17 +72,17 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <img src="images/shoes.jpg" alt="Shoes" class="img-fluid img-thumbnail">
+                <img src="shoes.jpg" alt="Shoes" class="img-fluid img-thumbnail">
                 <p>Shoes</p>
                 <button type="button" class="btn btn-warning">Buy Me Now</button>
             </div>
             <div class="col">
-                <img src="images/stones.jpg" alt="Stones" class="img-fluid img-thumbnail">
+                <img src="stones.jpg" alt="Stones" class="img-fluid img-thumbnail">
                 <p>Stones</p>
                 <button type="button" class="btn btn-warning">Buy Me Now</button>
             </div>
             <div class="col">
-                <img src="images/wine.jpg" alt="Wine" class="img-fluid img-thumbnail">
+                <img src="wine.jpg" alt="Wine" class="img-fluid img-thumbnail">
                 <p>Wine</p>
                 <button type="button" class="btn btn-warning">Buy Me Now</button>
             </div>
@@ -91,7 +91,7 @@
     <div class="container">
         <div class="row row-cols-3">
             <div class="col">
-                <img src="images/wood.jpg" alt="Wood" class="img-fluid img-thumbnail">
+                <img src="wood.jpg" alt="Wood" class="img-fluid img-thumbnail">
                 <p>Wood</p>
                 <button type="button" class="btn btn-warning">Buy Me Now</button>
                 <!--I was confused initially that the wood image was much larger than the others as it existed on it's own column but I changed the class so that it's in line with the other images. At first I used col-sm-4 but it showed a large image on mobile view. I then changed to the row row-cols-3 class above and now it looks correct and in line with the other images-->
@@ -132,7 +132,7 @@
         </tbody>
     </table>
     <h2>Contact us any time.</h2>
-    <img src="images/crazyjoe.jpg" class="images img-fluid border-0 mx-auto d-block joe" alt="crazy joe">
+    <img src="crazyjoe.jpg" class="images img-fluid border-0 mx-auto d-block joe" alt="crazy joe">
     <p>Contact Us</p>
     <form id="contact">
 
